--- a/.github/workflows/build-whitepaper.yml
+++ b/.github/workflows/build-whitepaper.yml
@@ -15,7 +15,7 @@ jobs:
 
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --output=build/whitepaper.pdf ${{ steps.files_list.outputs.files }}
+          args: --filter pandoc-include --output=build/whitepaper.pdf ${{ steps.files_list.outputs.files }} 
           
       - uses: actions/upload-artifact@master
         with:
