Added pandoc-include. Modified pdf build to use other image

--- a/.github/workflows/build-whitepaper.yml
+++ b/.github/workflows/build-whitepaper.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           echo "::set-output name=files::$(printf '"%s" ' whitepaper/Innholdsfortegnelse.md)"
 
-      - uses: docker://pandoc/latex:2.9
+      - uses: docker://haraldf/pandoc-include:latest
         with:
           args: --output=build/whitepaper.pdf ${{ steps.files_list.outputs.files }} 
           
