La til kapittel om Automatisering og xOps

--- a/.gitignore
+++ b/.gitignore
@@ -349,4 +349,7 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
+# PyCharm
+**/.idea/*
+
 build/whitepaper2.pdf
